style main container and fix content behind nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,16 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+.container {
+  width: 450px;
+  padding-top: 140px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 1;
+  background: #ffffff;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
