--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@ body {}
 
   #nav-bar {
     position: fixed;
+    z-index: 2;
     width: 100%;
     height: 80px;
     margin: 0;
